# snowupdate

./: Makefile.in  README  README.md  aclocal.m4  configure  setup.cfg  setup.py  update-manager
UpdateManager/: Dialogs.py  HelpViewer.py  InstallProgress.py  SimpleGtkbuilderApp.py  UnitySupport.py  UpdateManager.py  UpdateProgress.py  UpdatesAvailable.py
UpdateManager/Core/: MetaRelease.py  MyCache.py  UpdateList.py  utils.py
UpdateManager/backend/: InstallBackendAptdaemon.py  InstallBackendSynaptic.py  __init__.py
data/: Makefile.am  Makefile.in  apt-cdrom-check  apt_check.py  backend_helper.py  cddistupgrader  com.ubuntu.update-notifier.gschema.xml.in  package-data-downloader
data/gtkbuilder/: Dialog.ui  UpdateManager.ui
debian/: changelog  control  rules  source_update-manager.py  update-manager.install  update-notifier-common.install  update-notifier.install
debian/tests/: control
pixmaps/: Makefile.in
po/: POTFILES.in  ace.po  af.po  am.po  an.po  ar.po  ast.po  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  de_DE.po  dv.po  el.po  en.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fa_AF.po  fi.po  fil.po  fo.po  (+76 more)
src/: Makefile.am  Makefile.in  avahi.c  avahi.h  cdroms.c  crash.c  hooks.c  reboot.c  reboot.h  uevent.c  update-notifier.c  update-notifier.h  update.c  update.h
tests/: test_cache.py  test_changelog.py  test_meta_release_core.py  test_proxy.py  test_update_error.py  test_update_list.py
ui/: Makefile.in
(+6 files in other folders)
